--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>About Hot Beans </h2><br>
-      <h4>Hot Beans is a Nottingham based website development company who specialises in creating high quality websites to meet customer demands. Our employees work quiclky and efficiently to create websites for our clients, we also host and maintain websites on our servers so that you don't have to!</h4><br>
+      <h4>Hot Beans is a Nottingham based website development company who specialises in creating high quality websites to meet customer demands. Our employees work quickly and efficiently to create websites for our clients, we also host and maintain websites on our servers so that you don't have to!</h4><br>
       <p>Here at hot beans we strive to develop the best websites possible for our customers, we do this by ensuring that our employees are well looked after so that they can perform to their maximum ability to provide you with an amazing website! When creating websites for our clients we take time to create a plan and develop the code so that there are no errors in the final product. Hot beans has created thousands of websites for clients all over the world. We create websites to suit all customer needs and within a short time frame, we do this all while still offering a competatively low price.</p>
       
     </div>
