--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <div class="jumbotron text-center">
   <h1>Hot Beans Website Development</h1> 
-  <p>We specialise in website development and have been reccomended by many differnt clients all over the world!</p> 
+  <p>We specialise in website development and have been reccomended by many clients all over the world!</p> 
   <form>
     <div class="input-group">
       <!input type="email" class="form-control" size="50" placeholder="Email Address" required>
