--- a/index.html
+++ b/index.html
@@ -39,15 +39,7 @@
 
 <div class="jumbotron text-center">
   <h1>Hot Beans Website Development</h1> 
-  <p>We specialise in website development and have been reccomended by many clients all over the world!</p> 
-  <form>
-    <div class="input-group">
-      <!input type="email" class="form-control" size="50" placeholder="Email Address" required>
-      <!div class="input-group-btn">
-        <!button type="button" class="btn btn-danger"></!button>
-      </!div>
-    </div>
-  </form>
+  <p>We specialise in website development and have been recomended by many clients all over the world!</p> 
 </div>
 
 <!-- Container (About Section) -->
@@ -56,7 +48,7 @@
     <div class="col-sm-8">
       <h2>About Hot Beans </h2><br>
       <h4>Hot Beans is a Nottingham based website development company who specialises in creating high quality websites to meet customer demands. Our employees work quickly and efficiently to create websites for our clients, we also host and maintain websites on our servers so that you don't have to!</h4><br>
-      <p>Here at hot beans we strive to develop the best websites possible for our customers, we do this by ensuring that our employees are well looked after so that they can perform to their maximum ability to provide you with an amazing website! When creating websites for our clients we take time to create a plan and develop the code so that there are no errors in the final product. Hot beans has created thousands of websites for clients all over the world. We create websites to suit all customer needs and within a short time frame, we do this all while still offering a competatively low price.</p>
+      <p>Here at hot beans we strive to develop the best websites possible for our customers, we do this by ensuring that our employees are well looked after so that they can perform to their maximum ability to provide you with an amazing website! When creating websites for our clients we take time to create a plan and develop the code so that there are no errors in the final product. Hot beans has created thousands of websites for clients all over the world. We create websites to suit all customer needs and within a short time frame, we do this all while still offering a competitively  low price.</p>
       
     </div>
     <div class="col-sm-4">
@@ -74,8 +66,8 @@
     <div class="col-sm-8">
       <h2>Online web dev courses:</h2><br>
       <h4><strong>Helpful courses to get you started on your web dev journey:</strong> </h4>All developers need to start somewhere, so why not start here with us? We are offering free website development courses to get you started on your way to becoming a website developer! 
-      The courses we offer range from beginner level programming to high level webiste management, we provide courses for all levels so that we can help imporve your web dev skills, even if you are a veteran website developer our course may still teach you some things you dont already know. <br>
-      <p>We also offer an apprenticeship program for upcoming web developers who have just finished school and are looking for a carrer in website development.</p>
+      The courses we offer range from beginner level programming to high level website management, we provide courses for all levels so that we can help improve your web dev skills, even if you are a veteran website developer our course may still teach you some things you don't already know. <br>
+      <p>We also offer an apprenticeship program for upcoming web developers who have just finished school and are looking for a career in website development.</p>
       <p>Take a look below at our web development courses to help you on your journey as a web developer.</p>
     </div>
   </div>
@@ -214,8 +206,8 @@
           <p>Experience with Microsoft applications (word, excel, etc)<p>
           <p>Be able to write code from scratch</p>
           <p>Write clean and efficient code</p>
-          <p>punctual</p>
           <P>Work well with peers</P>
+          <p>Punctual</p>
           <p>Experience with version control software(e.g. Github)</p>
           <p>Staying up to date with new and upcoming technologies </p>
         </div>
@@ -316,7 +308,7 @@
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">Application Form</h2>
+  <h2 class="text-center"></h2>
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
@@ -324,26 +316,8 @@
       <p><span class="glyphicon glyphicon-phone"></span> +00 0115 910 0100</p>
       <p><span class="glyphicon glyphicon-envelope"></span> HotBeanssupport@gmail.com</p>
     </div>
-    <div class="col-sm-7 slideanim">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="job" name="job" placeholder="Job Role" type="text" required>
-        </div>
-      </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="short explanation of why you want to apply: " rows="5"></textarea><br>
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <p>Attatch CV</p>
-          <input class="form-control" id="CV" name="CV" placeholder="Attatch CV" type="file" required>
-        </div>
-        <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Send</button>
+    
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSejBfEmNgsAh-apXnKG6_btAGoJNSCWtRtBAuN0z4wYFlGyGQ/viewform?embedded=true" width="640" height="1126" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
       </div>
     </div>
